# AutoCopy-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/2019-12-24-134227_create_games/: down.sql  up.sql
src/: error.rs  main.rs  models.rs  schema.rs  utils.rs
